# paper-reader

./: README.md  autoresearch.md
paper-reader-insights/: .gitignore  README.md  pyproject.toml
paper-reader-insights/paper_reader_insights/: __init__.py  analysis.py  cli.py  loader.py  models.py  taxonomy.py
paper-reader-insights/tests/: test_insights.py
src/paper_reader/: ai_summary.py  app.py  insights_history.py  insights_momentum.py  insights_opportunity.py  prompt_manager.py  task_queue.py
src/paper_reader/static/: style.css
src/paper_reader/templates/: base.html  index.html  insights.html  sources.html
src/paper_reader/templates/panels/: batch_run.html
tests/: test_ai_summary.py  test_app.py
